[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/MainGarden.gd" type="Script" id=1]
[ext_resource path="res://asset/naraessets/main outline.png" type="Texture" id=2]
[ext_resource path="res://scripts/GardenPlot.gd" type="Script" id=3]
[ext_resource path="res://asset/naraessets/3x3farmplot.png" type="Texture" id=4]
[ext_resource path="res://asset/naraessets/logs.png" type="Texture" id=5]
[ext_resource path="res://asset/naraessets/Prototypes/plotbutton.png" type="Texture" id=6]
[ext_resource path="res://asset/naraessets/500x650 Assets/turniphousebutton.png" type="Texture" id=7]
[ext_resource path="res://asset/naraessets/500x650 Assets/turniphouseclicked.png" type="Texture" id=8]
[ext_resource path="res://asset/naraessets/turniphouse.png" type="Texture" id=9]
[ext_resource path="res://asset/naraessets/turniphouse_open.png" type="Texture" id=10]
[ext_resource path="res://asset/naraessets/500x650 Assets/musicbutton_a.png" type="Texture" id=11]
[ext_resource path="res://asset/naraessets/500x650 Assets/turnip interior.png" type="Texture" id=12]
[ext_resource path="res://asset/naraessets/500x650 Assets/chest_a.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 214, 325 ), Vector2( 866, 325 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "To House"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1, 1.5 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 755, 480 ), Vector2( 755, 480 ), Vector2( 1518, 480 ), Vector2( 1518, 480 ) ]
}

[node name="GardenJam" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Outline" type="Sprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="GardenPlot" type="Node2D" parent="."]

transform/pos = Vector2( 94.8051, 165.129 )
script/script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="GardenPlot"]

transform/pos = Vector2( -24.2532, -1.44812 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="LogFrame" type="Sprite" parent="GardenPlot"]

transform/pos = Vector2( 175.104, 177.656 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 755, 480 )
transform/rot = 0.1
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 1620
limit/bottom = 960
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="ToPlot" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 560.0
margin/top = 800.0
margin/right = 631.0
margin/bottom = 870.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ToHouse" type="TextureButton" parent="."]

rect/scale = Vector2( 0.9, 0.9 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 780.0
margin/right = 525.0
margin/bottom = 880.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="EnterHouse" type="TextureButton" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 639.0
margin/top = 126.0
margin/right = 1318.0
margin/bottom = 1063.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/hover = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ExitHouse" type="TextureButton" parent="."]

rect/scale = Vector2( 0.9, 0.9 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1117.0
margin/top = 787.0
margin/right = 1192.0
margin/bottom = 887.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="SoundButton" type="TextureButton" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 466.0
margin/top = 1.0
margin/right = 529.0
margin/bottom = 75.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Room" type="Sprite" parent="."]

transform/pos = Vector2( 1352, 400.523 )
texture = ExtResource( 12 )

[node name="ChestButton" type="TextureButton" parent="."]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1307.0
margin/top = 800.0
margin/right = 1435.0
margin/bottom = 888.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TransitionAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/Camera Slide" = SubResource( 1 )
"anims/To House" = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="ToPlot" to="." method="_on_ToPlot_pressed"]

[connection signal="pressed" from="ToHouse" to="." method="_on_ToHouse_pressed"]

[connection signal="pressed" from="EnterHouse" to="." method="_on_EnterHouse_pressed"]

[connection signal="pressed" from="ExitHouse" to="." method="_on_ExitHouse_pressed"]

[connection signal="pressed" from="ChestButton" to="." method="_on_ChestButton_pressed"]


